YUK-26124 fixed timezone alignment

--- a/yukon-client/yukon-web/src/com/cannontech/web/common/resources/yukon.less
+++ b/yukon-client/yukon-web/src/com/cannontech/web/common/resources/yukon.less
@@ -1661,7 +1661,7 @@ hr.dashed,
     color: #999;
     font-size: 13px;
     padding-right: 5px;
-	padding-top: 12px;
+    padding-top: 8px;
 }
 input.datePicker, 
 input.timePicker,
